syntax = "proto3";

package superexam.ingestion;

service IngestionService {
  // Uploads a PDF file (as a single message) and receives a stream of status updates.
  // Changed from bidirectional streaming to support gRPC-Web.
  rpc UploadPdf (UploadRequest) returns (stream IngestionStatus);
}

message UploadRequest {
  FileMetadata metadata = 1;
  bytes file_data = 2;
}

message FileMetadata {
  string filename = 1;
  string content_type = 2; // e.g., "application/pdf"
  string user_prompt = 3;
}

message IngestionStatus {
  enum State {
    QUEUED = 0;
    PROCESSING_TEXT = 1;
    EXTRACTING_IMAGES = 2;
    SAVING = 3;
    COMPLETED = 4;
    FAILED = 5;
  }
  
  State state = 1;
  string message = 2;
  string document_id = 3; // Available when completed
  int32 progress_percent = 4;
}
